--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     
     <div id="logo">
-        <img src="karmnik.jpg" id="karmniczek_obrazek">
+        <div id="nname">Algorytm MRP dla produkcji ... </div>
     </div>
 
     <div id="main">
