--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
     </div>
 
     <div id="authors_bar">
+        <div  id="h3s"><h3>Praca studentów:</h3></div>
         <div>
-            <img src="birdie1.png" id="ptaszek_uwu">
             <p>Ivan Kudybyn</p>
         </div>
         <div>
-            <img src="birdie1.png" id="ptaszek_uwu">
             <p>Volodymyr Tymchyshyn</p>
         </div>
     </div>
