--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 <body>
     
     <div id="logo">
-        <div id="nname">Algorytm MRP dla produkcji ... </div>
+        <div id="nname">ALGORYTM MRP DLA PRODUKCJI DRONÓW </div>
+    </div>
+
+    <div id="myimage">
+
     </div>
 
     <div id="main">
